[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/LevelSelectScreen.gd" type="Script" id=1]
[ext_resource path="res://UI/roboto_mono_36.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/roboto_mono_64.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.235294, 0.235294, 0.235294, 1 )

[node name="LevelSelectScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 560.0
custom_constants/separation = 80

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_right = 944.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 3 )
text = "LEVEL SELECT"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 166.0
margin_right = 944.0
margin_bottom = 448.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
margin_left = 212.0
margin_right = 732.0
margin_bottom = 282.0
custom_constants/separation = 100

[node name="LeftSide" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer/HBoxContainer"]
margin_right = 210.0
margin_bottom = 282.0
custom_constants/separation = 60

[node name="Level1" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/HBoxContainer/LeftSide"]
margin_right = 210.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = " LEVEL 1 "

[node name="Level2" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/HBoxContainer/LeftSide"]
margin_top = 114.0
margin_right = 210.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 2 )
text = " LEVEL 2 "

[node name="Level3" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/HBoxContainer/LeftSide"]
margin_top = 228.0
margin_right = 210.0
margin_bottom = 282.0
custom_fonts/font = ExtResource( 2 )
text = " LEVEL 3 "

[node name="RightSide" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer/HBoxContainer"]
margin_left = 310.0
margin_right = 520.0
margin_bottom = 282.0
custom_constants/separation = 60

[node name="Level4" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/HBoxContainer/RightSide"]
margin_right = 210.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "LEVEL 4 "

[node name="Level5" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/HBoxContainer/RightSide"]
margin_top = 114.0
margin_right = 210.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 2 )
text = " LEVEL 5 "

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/HBoxContainer/RightSide"]
margin_top = 228.0
margin_right = 210.0
margin_bottom = 282.0
custom_fonts/font = ExtResource( 2 )
text = " HOME "

[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/HBoxContainer/LeftSide/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/HBoxContainer/LeftSide/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/HBoxContainer/LeftSide/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/HBoxContainer/RightSide/Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/HBoxContainer/RightSide/Level5" to="." method="_on_Level5_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/HBoxContainer/RightSide/Quit" to="." method="_on_Quit_pressed"]
